--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ nav {
 .navbar .dropdown {
     display: none;
     position: absolute;
-    background-color: var(--wam-wht);
+    background-color: var(--wam-light-gry);
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     width: 100%;
     top: 7vh;
@@ -111,7 +111,7 @@ nav {
 
 .navbar .dropdown .dropdown-menu-item {
     text-align: center;
-    border-top: solid 1px grey;
+    border-top: solid 1px var(--wam-wht);
     height: 6vh;
 }
 
@@ -195,6 +195,10 @@ nav {
 
 .msg-wrapper .item-1 {
     grid-column: 1 / span 4;
+    align-items: center;
+    justify-content: center;
+    font-size: 4vh;
+    font-weight: 600;
 }
 
 .tip-wrapper {
@@ -248,12 +252,16 @@ small {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     header {
-        height: 1.5vh;
+        height: 1vh;
     }
 
     nav {
-        height: 8.5vh;
-        top: 1.5vh;
+        height: 9vh;
+        top: 1vh;
+    }
+
+    .navbar .dropdown {
+        top: 8vh;
     }
 
     .logo img {
@@ -339,6 +347,20 @@ small {
 }
 
 @media only screen and (max-width: 640px) and (orientation: landscape) {
+    header {
+        height: 1vh;
+        /*background-color: cyan;*/
+    }
+
+    nav {
+        height: 9vh;
+        top: 1vh;
+    }
+
+    .navbar .dropdown .dropdown-menu-item {
+        height: 8vh;
+    }
+
 
     .logo img {
         max-height: 90%;
@@ -350,11 +372,11 @@ small {
     }
 
     .img-wrapper {
-        max-height: 20vh;
+        max-height: 50vh;
     }
 
     .img-wrapper img {
-        height: 20vh;
+        height: 100%;
     }
 
     .msg-wrapper {
@@ -432,20 +454,25 @@ small {
 }
 
 @media only screen and (min-width: 600px) and (orientation: landscape) {
+
+    .navbar .dropdown {
+        top: 9vh;
+    }
+
     .menu li a {
         font-size: 14px;
     }
 
     .img-wrapper {
-        height: 25vh;
+        height: 50vh;
     }
 
     .img-wrapper img {
-        height: 25vh;
+        height: 100%;
     }
 
     .msg-wrapper {
-        grid-template-rows: 5vh 20vh 20vh 20vh 20vh;
+        grid-template-rows: 5vh 30vh 30vh 30vh 30vh;
     }
 }
 
