--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,8 @@ nav {
 .menu li {
     margin: 0 .3vh;
     border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .menu li a {
@@ -82,14 +84,18 @@ nav {
     color: var(--wam-dark-gry);
     font-size: 1.1em;
     padding: 12px;
-    border-radius: 8px;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .menu li a:hover,
 .menu li a:active {
     background-color: var(--wam-light-gry);
     width: 100%;
-    border-radius: 8px;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .menu-item {
@@ -97,11 +103,11 @@ nav {
     align-items: center;
     justify-content: center;
     border: 1.1px solid var(--wam-light-gry);
-    border-radius: 0px;
+    border-radius: 5px;
 }
 
 .contact-item {
-    background-color: #E3AD40;
+    background-color: #64908A;
 }
 
 .navbar {
@@ -207,7 +213,7 @@ nav {
     background-color: var(--wam-red);
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(4, calc(25% - 8px));
+    grid-template-columns: repeat(4, calc(25% - 50px));
     grid-template-rows: 10% 86%;
     height: calc(14vh - 20px);
     justify-content: center;
@@ -219,6 +225,7 @@ nav {
     align-items: center;
     justify-content: center;
     font-weight: 600;
+    height: 50px;
 }
 
 .tip-wrapper {
